--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "We awesome 401 backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
