--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "node index.js"
+    "start": "node index.js",
+    "watch": "nodemon index.js",
+    "start-db": "mongod --dbpath ./db",
+    "stop-db": "sudo killall mongod",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
