--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "jsonwebtoken": "latest",
-    "mongoose": "^4.13.3"
+    "mongoose": "^4.13.3",
+    "sendmail": "^1.2.0"
   }
 }
