--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.16.2",
     "jsonwebtoken": "latest",
     "mongoose": "^4.13.3",
+    "nodemailer": "^4.4.0",
     "sendmail": "^1.2.0"
   }
 }
