--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "We awesome 401 backend",
   "main": "index.js",
   "scripts": {
-    "test": "nyc mocha",
+    "test": "mocha",
     "start": "node index.js",
     "watch": "nodemon index.js",
     "start-db": "mongod --dbpath ./db",
